--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node .\\src\\index.js"
   },
+  "engines": {
+    "node": "16.13.1"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
